context: Add missing BeginRequest / EndRequest

https://bugzilla.gnome.org/show_bug.cgi?id=703068